--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 osx_image: xcode7.2
 language: objective-c
 
+before_install:
+  - brew update
+  - brew outdated carthage || brew upgrade carthage
+
 cache: bundler
 
 script:
   - ./Script/unit_tests.sh
+  - ./Script/installations_tests.sh
